--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -12,3 +12,4 @@ serde = "1.0.103"
 serde_derive = "1.0.103"
 base64 = "0.11.0"
 reqwest = { version = "0.9.22", features = [] }
+chrono = { version = "0.4.10", features=["serde"] }
