--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -13,3 +13,4 @@ serde_derive = "1.0.103"
 base64 = "0.11.0"
 reqwest = { version = "0.9.22", features = [] }
 chrono = { version = "0.4.10", features=["serde"] }
+env_logger = "0.7.1"
