--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -14,3 +14,4 @@ base64 = "0.11.0"
 reqwest = { version = "0.9.22", features = [] }
 chrono = { version = "0.4.10", features=["serde"] }
 env_logger = "0.7.1"
+failure = "0.1.6"
